# evox_erp

./: .gitattributes  .gitignore  BRANCH_TESTING_GUIDE.md  DEVELOPMENT_WORKFLOW.md  MANIFEST.in  PHASE_1_CHEQUE_TESTING_CHECKLIST.md  PHASE_2_ACCOUNTING_TESTING_CHECKLIST.md  README.md  pyproject.toml
docs/: cheque-accounting-plan.md  cheque-module-spec.md  cheque-test-cases.md  development-notes.md
evox_erp/: __init__.py  hooks.py  modules.txt  patches.txt
evox_erp/cheque_management/: __init__.py  cheque_accounting.py  cheque_lifecycle.py  report_utils.py
evox_erp/cheque_management/doctype/cheque_customer_receipt/: cheque_customer_receipt.js  cheque_customer_receipt.json  cheque_customer_receipt.py  cheque_customer_receipt_list.js
evox_erp/cheque_management/doctype/cheque_customer_receipt_cheque/: cheque_customer_receipt_cheque.json  cheque_customer_receipt_cheque.py
evox_erp/cheque_management/doctype/cheque_movement/: cheque_movement.js  cheque_movement.json  cheque_movement.py  cheque_movement_list.js
evox_erp/cheque_management/doctype/cheque_register/: cheque_register.js  cheque_register.json  cheque_register.py
evox_erp/cheque_management/doctype/cheque_settings/: cheque_settings.json  cheque_settings.py
evox_erp/config/: desktop.py
evox_erp/desktop_icon/: cheque_management.json
evox_erp/evox_erp/: __init__.py
evox_erp/patches/v1_0/: fix_cheque_management_workspace.py  normalize_movement_types.py
evox_erp/patches/v2_0/: add_phase2_link_fields.py
evox_erp/workspace_sidebar/: cheque_management.json
(+26 files in other folders)
